Change typing animation and some other edits like change default lang

--- a/components/header.html
+++ b/components/header.html
@@ -9,7 +9,7 @@
     </div>
     <div class="language-switcher">
         <button class="lang-btn" data-lang="ru">RU</button>
-        <button class="lang-btn" data-lang="en">EN</button>
+        <button class="lang-btn default-active" data-lang="en">EN</button>
     </div>
     <button class="menu-btn">
         <i class="fas fa-bars"></i>
